--- a/scss/hersa.scss
+++ b/scss/hersa.scss
@@ -128,6 +128,21 @@ section.gallery{
 section#intro-secas{
     background-image: url('../img/secas/seca-1.jpg');
 }
+section#intro-alargamientos{
+    background-image: url('../img/alargamientos/alargamiento-1.jpg');
+}
+section#intro-carrocerias{
+    background-image: url('../img/carrocerias/carroceria-2.jpg');
+    background-position: center;
+}
+section#intro-refrigeradas{
+    background-image: url('../img/refrigeracion/refri-2.jpg');
+    background-position: center;
+}
+section#intro-adaptaciones{
+    background-image: url('../img/especiales/especial-13.jpg');
+    background-position: center;
+}
 
 
 /* Animations
