Microdata and SEO optimizations

--- a/scss/hersa.scss
+++ b/scss/hersa.scss
@@ -9,104 +9,7 @@
 @import "typography";
 @import "buttons";
 @import "general";
+@import "sections";
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600|Open+Sans:400,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
-
-// Inicio
-section#productos{
-    .card-title{
-        color: $hersa-orange;
-    }
-}
-section#process{
-    .carousel-item{
-        h5,p{
-            color: white;
-        }
-    }
-}
-section#slogan{
-    background: $hersa-orange;
-    h2{
-        color: white;
-    }
-}
-section#contact{
-    #contact-info{
-        i{
-            color: $hersa-orange;
-        }
-        p{
-            font-size: ms(1);
-        }
-        a{
-            color: $hersa-gray;
-            &:hover{
-                color: $hersa-orange;
-                text-decoration: underline;
-            }
-        }
-    }
-}
-section#sitemap{
-    li.list-group-item{
-        font-family: 'Open Sans', sans-serif;
-    }
-}
-
-
-// PRODUCTOS
-section.image-intro{
-    height: 60vh;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top center;
-    h1{
-        color: white;
-    }
-}
-section.gallery{
-    div.view:hover{
-        cursor: zoom-in;
-    }
-}
-section#intro-secas{
-    background-image: url('../img/secas/seca-1.jpg');
-}
-section#intro-alargamientos{
-    background-image: url('../img/alargamientos/alargamiento-1.jpg');
-}
-section#intro-carrocerias{
-    background-image: url('../img/carrocerias/carroceria-2.jpg');
-    background-position: center;
-}
-section#intro-refrigeradas{
-    background-image: url('../img/refrigeracion/refri-2.jpg');
-    background-position: center;
-}
-section#intro-adaptaciones{
-    background-image: url('../img/especiales/especial-13.jpg');
-    background-position: center;
-}
-
-
-/* Gallery
-*
------------------------*/
-section.gallery{
-    .grid{
-        column-count: 4;
-        @include media-breakpoint-down(sm) {
-            column-count: 1;
-        }
-        @include media-breakpoint-only(md) {
-            column-count: 2;
-        }
-
-        .grid-item{
-            padding: 1rem;
-        }
-    }
-}
